# statuspage-1

./: .gitignore  CNAME  LICENSE.txt  README.md  bun.lockb  convert_to_bin.py  down.html  fetch_status.js  index.html  nova.toml  package-lock.json  package.json  pyproject.toml  temp.py  urls.json  wrangler.toml
.github/workflows/: build.yml  minify.yml  status_check.py  update-status.yml
functions/api/: status.js
src/: down.html  index.html  main.css  main.js  status_check.py
src/js/: down.js  main.js  popper-lite.min.js
static/: down.html  index.css  index.html  main.css
static/js/: down.js  main.js
worker/: index.js
