[project]
name = "iipython-status-page"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "minify-html>=0.15.0",
    "nova-framework>=0.9.1",
]

# This is very stupid.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]  # Doesn't even have any Python but too bad!
